tests/ui/bad_visibility.stderr
error: Unexpected input
 --> tests/ui/bad_visibility.rs:3:28
  |
3 | #[make_dst_factory(create, XYZ)]
  |                            ^^^
